# 30-Days-Solana-Developer-Bootcamp

./: .gitignore  README.md  Unclephil.md  package-lock.json  package.json
Cryptography/: 9ightshade.ts  AkintolaRichard.ts  README.md  Unclephil.ts  Victor-Okpukpan.ts  agedet.ts  main.ts
Custom-Onchain-Program/: main.ts
Introduction/: README.md
NFT/: index.ts
ReadData/: writingSol.ts
Reading/: 9ightshade.ts  AkintolaRichard.ts  esrun-1716146495187.tmp.mjs  main.ts  phil.ts
Token-Program/: main.ts  metadata.ts  mint.ts  tokenAccount.ts  tokenMint.ts  transferToken.ts
UnclePhil-SPL/: metadata.ts  mint.ts  tokenAccount.ts  tokenMint.ts  tokenTransfer.ts  transferToken.ts
Writing/: 9ightshade.md  AkintolaRichard.md  phil.ts
anchor-movie-review-program/: Anchor.toml
anchor-movie-review-program-1/programs/anchor-movie-review-program/: Cargo.toml
anchor-movie-review-program-1/tests/: anchor-movie-review-program.ts
anchor-movie-review-program-2/: Anchor.toml  README.md
anchor-movie-review-program-2/.github/workflows/: tests.yaml
anchor-movie-review-program-2/programs/anchor-movie-review-program/: Cargo.toml
anchor-movie-review-program-2/programs/anchor-movie-review-program/src/: constants.rs  lib.rs
anchor-movie-review-program-2/tests/: anchor-movie-review-program.ts
counter/: Anchor.toml  package.json
counter/tests/: counter.ts
generate-keypair/: generate-keypair.ts
solana-movie-frontend-1/components/: Form.tsx
solana-movie-frontend-2/coordinators/: MovieCoordinator.ts
solana-movie-frontend-3/coordinators/: MovieCoordinator.ts
(+3 files in other folders)
